# MisakaImoto

./: readme.md
3Dmodle/: 3Dmodel_release.SLDPRT  3Dmodel_release_1.3.STL
Esp8266/: Esp8266.ino
PCB/: PCB_2020-06-22_23-10-36_2020-08-06_23-35-43.json
Raspberrypi/: CMakeLists.txt
Raspberrypi/exe/: CMakeLists.txt  main.cpp
Raspberrypi/module/: CMakeLists.txt
Raspberrypi/module/src/: fb-pusher.cpp  fb-pusher.hpp  frame_stacker.cpp  frame_stacker.hpp  gpio_status.cpp  gpio_status.hpp  video_player.cpp  video_player.hpp  voltage_detect.cpp  voltage_detect.hpp
python_demo/: main.py
python_demo/lib/: GPIO.py  font_display.py  get_path.py  system_status.py
